--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,10 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function elevado_a_cuatro() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 4);
+}
 </script>
 </head>
 <body>
@@ -13,6 +17,9 @@ function cube() {
  <input type="text" id="n1">
  <p>
  <button onclick="cube()"> x^3 </button>
+ </p>
+<p>
+ <button onclick="elevado_a_cuatro()"> x^4 </button>
  </p>
 </body>
 </html>
